@@ -6,7 +6,6 @@ if(enable_print_message)
   message("")
   message("SIZEOF_MAX ..................: ${SIZEOF_MAX}")
   message("PTH_STACKGROWTH .............: ${PTH_STACKGROWTH}")
-  message("need_getline ................: ${need_getline}")
   message("need_asprintf ...............: ${simgrid_need_asprintf}")
   message("need_vasprintf ..............: ${simgrid_need_vasprintf}")
   message("PREFER_PORTABLE_SNPRINTF ....: ${PREFER_PORTABLE_SNPRINTF}")
