@@ -1,12 +1,12 @@
 /* automaton - representation of büchi automaton */
 
-/* Copyright (c) 2011. The SimGrid Team.
- * All rights reserved.                                                     */
+/* Copyright (c) 2011-2013. The SimGrid Team. All rights reserved.          */
 
 /* This program is free software; you can redistribute it and/or modify it
  * under the terms of the license (GNU LGPL) which comes with this package. */
 
 #include "xbt/automaton.h"
+#include <stdio.h> /* printf */
 
 xbt_automaton_t xbt_automaton_new(){
   xbt_automaton_t automaton = NULL;
